[package]
name = "rhuffle"
version = "0.3.0"
authors = ["ctylim <lim.0.ctyl@gmail.com>"]
build = "build.rs"
edition = "2018"
readme = "README.md"
repository = "https://github.com/ctylim/rhuffle"
keywords = ["cli", "shuffle"]
license = "MIT"
description = "Random shuffler for large file with many lines"

[dependencies]
rand = "0.7.0"
log = "0.4.6"
env_logger = "0.6.2"
clap = "2.33.0"
tempfile = "3.1.0"
